# safepy

./: .gitignore  DESIGN.md  README.md  conftest.py  pyproject.toml
docs/: OVERVIEW.md  deferred-synthetic-control.md  further-work.md  plan-datasets-and-catalog.md  plan-duckdb.md  plan-polars.md  plan-r.md  security-indirect-disclosure.md  suppression-measures.md
safepy/: __init__.py  _payload.py  api.py  ast_gate.py  charts.py  duckdb_api.py  errors.py  formula.py  formula_api.py  lifelines_api.py  namespaces.py  polars_api.py  policy.py  pyfixest_api.py  r_api.py  r_expr.py  result.py  runtime.py  safe.py  safeframe.py  stats.py
safepy/adapters/: base.py  pandas_adapter.py  safeframe_adapter.py
safepython/: __init__.py  api.py  ast_gate.py  errors.py  mediator.py  policy.py  result.py  runtime.py  safe.py  safeframe.py  stats.py
safepython/adapters/: __init__.py  base.py  pandas_adapter.py  safeframe_adapter.py
tests/: fixtures.py  test_allowed.py  test_ate.py  test_ate_followups.py  test_causal.py  test_datasets.py  test_functions.py  test_functions_expr.py  test_hypothesis_tests.py  test_lifelines_import.py  test_more_methods.py  test_more_methods2.py  test_multiresult.py  test_noise.py  test_predict.py  test_pyfixest_formula.py  test_stats.py  test_strict.py  test_strict_duckdb.py  test_strict_pandas.py  test_strict_phase2.py  test_strict_phase3.py  test_strict_phase4.py  test_strict_phase5.py  test_strict_phase6.py  test_strict_polars.py  test_strict_r.py  test_suppression_tiers.py  test_survival.py  test_synthetic_control.py
tools/: coverage_sweep.py
(+2 files in other folders)
